# calmly-list

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  index.html  nginx-combined.conf  openapi.yaml  package-lock.json  package.json  supervisord.conf
backend/: .gitignore  Dockerfile  README.md  db.sqlite3  init_db_script.py  pyproject.toml  test_bcrypt.py
backend/app/: api.py  auth.py  database.py  db.py  main.py  models.py  schema.py
backend/config/: settings.py
backend/tests/: conftest.py  test_api.py  test_auth.py
backend/tests_integration/: conftest.py  test_integration.py
backend/todos/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/todos/migrations/: 0001_initial.py
frontend/: Dockerfile  index.html  nginx.conf  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ProtectedRoute.tsx  TodoApp.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Login.tsx  Register.tsx
src/components/: TodoApp.tsx
