[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.123.0",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.38.0",
    "passlib[argon2]>=1.7.4",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
]
